--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -65,6 +65,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div>
+            <p><strong>{{ total_balance }}</strong></p>
+        </div>
 
         <div class="d-flex justify-content-center">
             <a class="btn btn-success" href="{{ url_for('add_transaction') }}">Add Transaction</a>
